--- a/app/src/main/res/layout-land/chat_activity.xml
+++ b/app/src/main/res/layout-land/chat_activity.xml
@@ -66,7 +66,7 @@
         android:inputType="textMultiLine"
         android:gravity="top|start"
         android:padding="20dp"
-        android:background="#66975d"
+        android:background="@drawable/rounded_input_box"
         android:textColor="#ffffff"
         android:textColorHint="#ccffffff"
         android:layout_marginStart="16dp"
@@ -97,8 +97,10 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:layout_marginStart="88dp"
+        app:fabSize="mini"
         android:contentDescription="Add Chat"
-        app:backgroundTint="#4CAF50"
+        android:backgroundTint="#A8D5A2"
+        app:tint="#FFFFFF"
         app:layout_constraintStart_toStartOf="@id/AddChatVerticalGuide"
         app:layout_constraintTop_toTopOf="@id/AddChatHorizontalGuide"
         app:srcCompat="@drawable/ic_add"
@@ -112,8 +114,9 @@
         android:elevation="8dp"
         app:itemIconTint="#4CAF50"
         app:itemTextColor="#4CAF50"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/bottom_navigation_menu"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        tools:layout_editor_absoluteX="0dp" />
 
     <Button
         android:id="@+id/KeywordButton1"
@@ -121,8 +124,8 @@
         android:layout_height="wrap_content"
         android:textSize="14dp"
         android:text="General"
-        android:background="@drawable/rounded_button_general"
-        android:textColor="#4CAF50"
+        android:background="@drawable/keyword_button_bg"
+        android:textColor="#66975d"
         app:layout_constraintBottom_toTopOf="@id/InputBox"
         app:layout_constraintStart_toStartOf="@id/KeywordsLeftGuide"
         />
@@ -133,8 +136,8 @@
         android:layout_height="wrap_content"
         android:textSize="14dp"
         android:text="School"
-        android:background="@drawable/rounded_button_school"
-        android:textColor="#4CAF50"
+        android:background="@drawable/keyword_button_bg"
+        android:textColor="#66975d"
         app:layout_constraintBottom_toTopOf="@id/InputBox"
         app:layout_constraintStart_toEndOf="@id/KeywordButton1"
         android:layout_marginLeft="110dp"
@@ -146,8 +149,8 @@
         android:layout_height="wrap_content"
         android:textSize="14dp"
         android:text="Work"
-        android:background="@drawable/rounded_button_work"
-        android:textColor="#4CAF50"
+        android:background="@drawable/keyword_button_bg"
+        android:textColor="#66975d"
         app:layout_constraintBottom_toTopOf="@id/InputBox"
         app:layout_constraintStart_toEndOf="@id/KeywordButton2"
         android:layout_marginLeft="110dp"
@@ -159,8 +162,8 @@
         android:layout_height="wrap_content"
         android:textSize="14dp"
         android:text="Home"
-        android:background="@drawable/rounded_button_home"
-        android:textColor="#4CAF50"
+        android:background="@drawable/keyword_button_bg"
+        android:textColor="#66975d"
         app:layout_constraintBottom_toTopOf="@id/InputBox"
         app:layout_constraintStart_toEndOf="@id/KeywordButton3"
         android:layout_marginLeft="110dp"
