--- a/app/src/main/res/layout/profile_activity.xml
+++ b/app/src/main/res/layout/profile_activity.xml
@@ -157,6 +157,65 @@
             android:layout_marginTop="8dp"
             app:strokeColor="#66975d"
             app:cornerRadius="12dp"/>
+
+        <TextView
+            android:id="@+id/resourceTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sometimes, we all need a little extra help — explore these resources: "
+            android:textColor="#2C3E50"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="12dp" />
+
+        <TextView
+            android:id="@+id/resource1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="🌍 Befrienders: www.befrienders.org"
+            android:textColor="#66975d"
+            android:textSize="16sp"
+            android:autoLink="web" />
+
+        <TextView
+            android:id="@+id/resource2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="🧠 MHA: www.mhanational.org"
+            android:textColor="#66975d"
+            android:textSize="16sp"
+            android:autoLink="web" />
+
+        <TextView
+            android:id="@+id/resource3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="🇬🇧 Mind: www.mind.org.uk"
+            android:textColor="#66975d"
+            android:textSize="16sp"
+            android:autoLink="web" />
+
+        <TextView
+            android:id="@+id/resource4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="🌐 IMHRC: www.imhrc.org"
+            android:textColor="#66975d"
+            android:textSize="16sp"
+            android:autoLink="web" />
+
+        <TextView
+            android:id="@+id/resource5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="👥 UNICEF: www.unicef.org/mental-health"
+            android:textColor="#66975d"
+            android:textSize="16sp"
+            android:autoLink="web" />
+
+
+
     </LinearLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -170,4 +229,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/bottom_navigation_menu" />
 
-</androidx.constraintlayout.widget.ConstraintLayout> 
+</androidx.constraintlayout.widget.ConstraintLayout>
